[package]
name = "cita-snappy"
version = "0.1.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
description = "A library provide compress method"
license = "Apache-2.0"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = {version = "1.0", features = ["parallel"]}
cmake = "0.1"